log

Thu 14 Mar 2024 08:25:54 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
d0f3528
Thu 14 Mar 2024 08:36:27 PM UTC: 
 exercises.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 47 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:71:10: error: function returns address of local variable [-Werror=return-local-addr]
   71 |   return arr_par;
      |          ^~~~~~~
exercises.c:67:14: error: array subscript <unknown> is outside array bounds of ‘int[<Ucc60>]’ [-Werror=array-bounds]
   67 |       arr_par[*newSize] = arr[i];
      |       ~~~~~~~^~~~~~~~~~
exercises.c:54:7: note: while referencing ‘arr_par.64’
   54 |   int arr_par[total];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
087a7d9
Thu 14 Mar 2024 08:37:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:71:18: error: expected expression before ‘]’ token
   71 |   return arr_par[];
      |                  ^
exercises.c:54:7: error: variable ‘arr_par’ set but not used [-Werror=unused-but-set-variable]
   54 |   int arr_par[total];
      |       ^~~~~~~
exercises.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6c0f6d1
Thu 14 Mar 2024 08:40:35 PM UTC: 
 exercises.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
Thu 14 Mar 2024 08:41:30 PM UTC: 
 exercises.c | 16 +++++-----------
 1 file changed, 5 insertions(+), 11 deletions(-)
test.c: In function ‘test_filterEvenNumbers’:
test.c:151:19: error: implicit declaration of function ‘filterEvenNumbers’; did you mean ‘test_filterEvenNumbers’? [-Werror=implicit-function-declaration]
  151 |     int *result = filterEvenNumbers(arr, size, &newSize);
      |                   ^~~~~~~~~~~~~~~~~
      |                   test_filterEvenNumbers
test.c:151:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
Thu 14 Mar 2024 08:42:10 PM UTC: 
 exercises.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  0|0
7373f25
Thu 14 Mar 2024 08:43:37 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
948dacb
Thu 14 Mar 2024 08:45:04 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
05a59a0
Thu 14 Mar 2024 08:46:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
914e613
Thu 14 Mar 2024 08:51:02 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6b86014
Thu 14 Mar 2024 08:52:11 PM UTC: 
 exercises.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 20/70
5b75973
Thu 14 Mar 2024 08:53:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
10fb387
Thu 14 Mar 2024 08:55:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
850a2d6
Thu 14 Mar 2024 08:57:43 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:32: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |       *arr_par = (int*)realloc(*arr_par, (size_par + 1) * sizeof(int));
      |                                ^~~~~~~~
      |                                |
      |                                int
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:1:
exercises.c:60:16: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   60 |       *arr_par = (int*)realloc(*arr_par, (size_par + 1) * sizeof(int));
      |                ^
exercises.c:61:7: error: invalid type argument of unary ‘*’ (have ‘int’)
   61 |       *arr_par[size_par] = arr[i];
      |       ^~~~~~~~~~~~~~~~~~
exercises.c:66:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   66 |   return *arr_par;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
030c415
Thu 14 Mar 2024 08:58:45 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
e0505db
Thu 14 Mar 2024 09:07:49 PM UTC: 
 exercises.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
db2265a
Thu 14 Mar 2024 09:11:55 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
9831cc8
